--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <label for="email">EMAIL</label>
                     <input id="email" name="email" type="email" />
                   </div>
-                  <div class="field">
+                  <div class="field pass">
                     <label for="password">PASSWORD</label>
                     <input id="password" name="password" type="password" />
                   </div>
@@ -82,7 +82,12 @@
               </div>
             </div>
             <div class="login-section">
-              <input type="submit" value="Create Account" name="submit" />
+              <input
+                class="submit"
+                type="submit"
+                value="Create Account"
+                name="submit"
+              />
               <p>Already have an account? <a href="#">Log in</a></p>
             </div>
           </form>
